feat/Agregar footer

--- a/src/index.html
+++ b/src/index.html
@@ -33,9 +33,10 @@
     </header>
     <main id="pokemon-details"></main>
     <footer class="footer" id="pokemon-list">
-      <section>
-        <p>Others</p>
-      </section>
-    </footer>
+        <section>
+          <h3>Others</h3>
+          <div id="pokemon-cards"></div>
+        </section>
+      </footer>
   </body>
 </html>
