Agregando cambios en el logo, colores y estilos

--- a/src/index.html
+++ b/src/index.html
@@ -28,13 +28,14 @@
               />
             </svg>
           </button>
+          <button id="toggle-dark-mode">Toggle Dark Mode</button>
         </form>
       </section>
     </header>
     <main id="pokemon-details"></main>
     <footer class="footer" id="pokemon-list">
         <section>
-          <h3>Others</h3>
+          <h3>OTHERS</h3>
           <div id="pokemon-cards"></div>
         </section>
       </footer>
